--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,12 +6,16 @@
             "command": "/usr/bin/clang++-20",
             "args": [
                 "-O3",
+                "-stdlib=libc++",
                 "-std=c++26",
                 "-Wall",
+                "-Wextra",
+                "-Werror",
                 "-pedantic",
                 "-pthread",
                 "-fdiagnostics-color=always",
-                "-g",
+                "-g3",
+                "-fexperimental-library",
                 "${file}",
                 "-o",
                 "${fileDirname}/out/${fileBasenameNoExtension}",
